After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 624562 - Fix seed_object_copy_property_names ().
Fix seed_object_copy_property_names ().
Status: RESOLVED FIXED
Product: seed
Classification: Bindings
Component: libseed
git master
Other All
: Normal normal
: ---
Assigned To: seed-maint
Depends on:
Blocks:
 
 
Reported: 2010-07-16 18:47 UTC by Steve Frécinaux
Modified: 2010-07-17 21:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix seed_object_copy_property_names (). (1.05 KB, patch)
2010-07-16 18:47 UTC, Steve Frécinaux
committed Details | Review

Description Steve Frécinaux 2010-07-16 18:47:54 UTC
Due to a typo, it only returned up to n-1 chars for each property names,
where n is the amount of properties the object has, making it unusable.
Comment 1 Steve Frécinaux 2010-07-16 18:47:56 UTC
Created attachment 166033 [details] [review]
Fix seed_object_copy_property_names ().

Due to a typo, it only returned up to n-1 chars for each property names,
where n is the amount of properties the object has, making it unusable.
Comment 2 Tim Horton 2010-07-16 20:23:55 UTC
You're free to commit that, if you can, otherwise I'll do it this weekend.
Comment 3 Steve Frécinaux 2010-07-17 21:27:03 UTC
Attachment 166033 [details] pushed as 9c98a38 - Fix seed_object_copy_property_names ().