Fix seed_object_copy_property_names ().

Due to a typo, it only returned up to n-1 chars for each property names,
where n is the amount of properties the object has, making it unusable.

https://bugzilla.gnome.org/show_bug.cgi?id=624562